# envsensor-fw-jfrog-demo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  frogbot-scan-pull-request.yml  frogbot-scan-repository.yml
evidence/: cert-template.json
include/: board.h  crc.h  interop_checksum.h  sensor.h  version.h.in
repo-templates/: ccache-local.json  generic-local.json
scripts/: artifactory_cache_proxy.py  build.sh  certify.sh  common.sh  setup_artifactory.sh  verify_reproducible.sh  xray_scan.sh
src/: crc.c  interop_checksum.c  main.c  sensor.c
tests/: CMakeLists.txt  test_crc.c
